# Model

./: .gitignore  CMakeLists.txt  deps.json  package.xml
Apps/: appCameraModelLearning.cpp  appDMPTrajectoryOptimization.cpp  appDynamicTrajectoryOptimizationTorques.cpp  appExperimentKick.cpp  appExperimentKick2.cpp  appExperimentOdometry.cpp  appFeedForwardLogsComparison.cpp  appFeedForwardSimulation.cpp  appHumanoidSimulationIdentification.cpp  appHumanoidSimulationLearning.cpp  appHumanoidSimulationPlayer.cpp  appMapSeriesLogsCut.cpp  appMapSeriesLogsProcess.cpp  appMapSeriesLogsViewer.cpp  appModelParametersViewer.cpp  appOdometryLogsTK.cpp  appOdometryModelCalibration.cpp  appOdometryModelLearning.cpp  appOdometryModelLearning2.cpp  appOdometryOffline.cpp  appOdometryPreparePredictiveModelData.cpp  appOdometrySimulator.cpp  appPlotter.cpp  appRhALTrajectory.cpp  appRhIOViewerModel.cpp  appRhIOViewerRobocup.cpp  appSplineGenerationCircle.cpp  appStaticTrajectoryOptimizationTorques.cpp  appStatsDynaban.cpp  appTestLearningFromLogs.cpp  appTestLegTorques.cpp  appTestZMPControl.cpp  appToddlingAnalyzer.cpp  appToddlingViewer.cpp  appTrajectoriesCorrection.cpp  appTrajectoriesFitting.cpp  appTrajectoriesGeneration.cpp  appTrajectoriesKickGeneration.cpp  appTrajectoriesLogFitting.cpp  appTrajectoriesSimulation.cpp  (+8 more)
Calibration/: LogLikelihoodMaximization.hpp
CartWalk/: CartWalk.cpp  CartWalk.h  CartWalkGradient.cpp  CartWalkGradient.hpp  CartWalkProxy.cpp  CartWalkProxy.hpp  PolySpline.hpp  SigmabanLeg.cpp  SigmabanLeg.h  linear_algebra.cpp  linear_algebra.h  math_basics.cpp  math_basics.h  math_log.cpp  math_log.h
Concepts/: FallDetectorConcept.cpp  FallDetectorConcept.hpp  FootStepDifferentiatorConcept.cpp  FootStepDifferentiatorConcept.hpp  FootStepIntegratorConcept.cpp  FootStepIntegratorConcept.hpp  HumanoidModelConcept.cpp  HumanoidModelConcept.hpp  HumanoidSensorsModelConcept.cpp  HumanoidSensorsModelConcept.hpp
DMP/: DMP.cpp  DMP.hpp  DMPSpline.cpp  DMPSpline.hpp
Data/: GrosbanToe.urdf  chewbacca_rhal.json  django_rhal.json  grosban.urdf  grosban_metabot.urdf  grosban_solidwork.urdf  leg.urdf  legWithPen.urdf  pendulum.urdf  pendulum_double.urdf  pendulum_triple.urdf  sigmaban.urdf  sigmaban_metabot.urdf  sigmaban_metabot_cleats.urdf
EigenLevenbergMarquardt/: LMonestep.h  LevenbergMarquardt  LevenbergMarquardt.h
Experiments/: CMakeLists.txt
Experiments/CartWalkGradientOptim/: CMakeLists.txt  main.cpp
Experiments/CartWalkTunner/: main.cpp
Experiments/SplinesPlayer/: main.cpp
Experiments/StaticWalkTest/: main.cpp
Experiments/Utils/: MotionCapture.cpp  MotionCapture.hpp  MotorsLayout.h  SDKConnection.cpp  SDKConnection.hpp  SDKInterface.cpp  SDKInterface.hpp
Gradient/: FiniteDifferenceGradient.cpp  FiniteDifferenceGradient.hpp
IKWalk/: IKWalk.cpp  IKWalk.hpp
LCPMobyDrake/: AUTHORS  LCPSolver.cpp  LCPSolver.hpp  drake_assert.h  drake_copyable.h
LegIK/: AUTHORS  LegIK.cpp  LegIK.hpp
LinearRegression/: MedianLinearRegression.cpp  MedianLinearRegression.hpp  SimpleLinearRegression.cpp  SimpleLinearRegression.hpp
Model/: ComponentLibrary.cpp  ComponentLibrary.hpp  ForwardSimulation.cpp  ForwardSimulation.cpp.bak  ForwardSimulation.cpp.bak.2  ForwardSimulation.hpp  GrobanToePressureModel.cpp  GrobanToePressureModel.hpp  HumanoidFixedModel.cpp  HumanoidFixedModel.hpp  HumanoidFixedPressureModel.cpp  HumanoidFixedPressureModel.hpp  HumanoidFloatingModel.cpp  HumanoidFloatingModel.hpp  HumanoidModel.cpp  HumanoidModel.hpp  HumanoidModelWithToe.cpp  HumanoidModelWithToe.hpp  HumanoidSimulation.cpp  HumanoidSimulation.hpp  InverseKinematics.cpp  InverseKinematics.hpp  JointModel.cpp  JointModel.hpp  Model.cpp  Model.hpp  ModelBuilder.cpp  ModelBuilder.hpp  MotorModel.cpp  MotorModel.hpp  NamesModel.h  NullSpace.cpp  NullSpace.hpp  OdometryModel.cpp  OdometryModel.hpp  PressureModel.cpp  PressureModel.hpp  RBDLClosedLoop.cpp  RBDLClosedLoop.h  RBDLContactLCP.cpp  (+9 more)
Moves/: Toddling.cpp  Toddling.hpp
Ncurses/: InterfaceCLI.cpp  InterfaceCLI.hpp
Odometry/: Odometry.cpp  Odometry.hpp  OdometryDisplacementModel.cpp  OdometryDisplacementModel.hpp  OdometryModel.cpp  OdometryModel.hpp  OdometryNoiseModel.cpp  OdometryNoiseModel.hpp  OdometrySequence.cpp  OdometrySequence.hpp
Plot/: Plot.hpp  tmpPlot.hpp
QuinticWalk/: Footstep.cpp  Footstep.hpp  QuinticExperiment.cpp  QuinticExperiment.hpp  QuinticWalk.cpp  QuinticWalk.hpp
RhAL/: RhALUtils.cpp  RhALUtils.h
Spline/: CubicSpline.cpp  CubicSpline.hpp  FittedSpline.cpp  FittedSpline.hpp  LinearSpline.cpp  LinearSpline.hpp  PolyFit.cpp  PolyFit.hpp  Polynom.cpp  Polynom.hpp  SmoothSpline.cpp  SmoothSpline.hpp  Spline.cpp  Spline.hpp  SplineContainer.hpp
StaticWalk/: StaticWalk.cpp  StaticWalk.hpp
Tests/: benchModel.cpp  benchVectorLabel.cpp  testAxisAngle.cpp  testBallCollisionSim.cpp  testCameraModel.cpp  testCartWalkGradient.cpp  testCartWalkProxy.cpp  testChrono.cpp  testCircularBuffer.cpp  testCombination.cpp  testConcept.cpp  testCubicSpline.cpp  testDMP.cpp  testDMPSpline.cpp  testDifferentiation.cpp  testEncoderFilter.cpp  testEuler.cpp  testFeedForward.cpp  testFileDump.cpp  testFiniteDifferenceGradient.cpp  testFittedSpline.cpp  testFootstep.cpp  testForwardSimulation.cpp  testForwardSimulationCalibration.cpp  testGaussianDistribution.cpp  testGaussianProcess.cpp  testGeometricMedian.cpp  testGrobanToe.cpp  testGrobanToePressure.cpp  testHumanoidFixedModel.cpp  testHumanoidPressureModel.cpp  testHumanoidSimulation.cpp  testIKWalk.cpp  testInterfaceCLI.cpp  testInverseKinematics.cpp  testIterativeLearningControl.cpp  testJointModel.cpp  testLCP.cpp  testLWPR.cpp  testLWPRAdvanced.cpp  (+38 more)
TimeSeries/: Concept.hpp  MetaParameter.hpp  MetaSeries.hpp  (+7 more)
Vendors/LWPR/: CMakeLists.txt
Vendors/LWPR/include/: lwpr.hh  lwpr_eigen.hpp
Vendors/LibCMAES/: CMakeLists.txt  configure.ac  libcmaes_config.h
Vendors/LibCMAES/src/: cmaes.h  cmaparameters.cc  cmaparameters.h
Vendors/LibGP/: CMakeLists.txt
Vendors/LibGP/include/: cov.h  gp.h
Vendors/LibGP/src/: cov_factory.cc  gp.cc  sampleset.cc
(+84 files in other folders)
